Major changes (#34)
