# docs/swagger.json
@@ -1000,7 +1000,7 @@
                 }
             }
         },
-        "/users/confirm": {
+        "/users/confirm-account": {
             "post": {
                 "security": [
                     {
@@ -1049,7 +1049,7 @@
                 }
             }
         },
-        "/users/confirm/resend": {
+        "/users/confirm-account/resend": {
             "post": {
                 "description": "Sends a token to provided mailbox, if the account awaits to be confirmed",
                 "consumes": [
@@ -1064,18 +1064,18 @@
                 "summary": "Send a new token to confirm an account",
                 "parameters": [
                     {
-                        "description": "ResendConfirm input",
+                        "description": "Resend confirm input",
                         "name": "data",
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/dto.ResendConfirmUserRequest"
+                            "$ref": "#/definitions/dto.UserEmailRequest"
                         }
                     }
                 ],
                 "responses": {
-                    "204": {
-                        "description": "No Content"
+                    "202": {
+                        "description": "Accepted"
                     },
                     "400": {
                         "description": "Bad Request",
@@ -1379,7 +1379,7 @@
                 }
             }
         },
-        "/users/refresh": {
+        "/users/me/tokens": {
             "post": {
                 "security": [
                     {
@@ -1425,8 +1425,56 @@
                 }
             }
         },
+        "/users/refresh": {
+            "post": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "description": "Requires a valid refresh token sent in the Authorization header",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Users"
+                ],
+                "summary": "Generate a new pair of user tokens",
+                "deprecated": true,
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/dto.Tokens"
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized",
+                        "schema": {
+                            "$ref": "#/definitions/errors.HTTPError"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "$ref": "#/definitions/errors.HTTPError"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/errors.HTTPError"
+                        }
+                    }
+                }
+            }
+        },
         "/users/register": {
             "post": {
+                "description": "A link to confirm account will be sent to the provided email",
                 "consumes": [
                     "application/json"
                 ],
@@ -1449,8 +1497,8 @@
                     }
                 ],
                 "responses": {
-                    "201": {
-                        "description": "Created"
+                    "202": {
+                        "description": "Accepted"
                     },
                     "400": {
                         "description": "Bad Request",
@@ -1460,6 +1508,101 @@
                     },
                     "409": {
                         "description": "Conflict",
+                        "schema": {
+                            "$ref": "#/definitions/errors.HTTPError"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/errors.HTTPError"
+                        }
+                    }
+                }
+            }
+        },
+        "/users/reset-password": {
+            "post": {
+                "description": "User receives a token at a given email",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Users"
+                ],
+                "summary": "Call an action to reset user's password",
+                "parameters": [
+                    {
+                        "description": "Reset passoword data",
+                        "name": "data",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/dto.UserEmailRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "202": {
+                        "description": "Accepted"
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/errors.HTTPError"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/errors.HTTPError"
+                        }
+                    }
+                }
+            },
+            "patch": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "description": "Requires a token sent in the Authorization header to verify password's change action",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Users"
+                ],
+                "summary": "Set a new password for a user",
+                "parameters": [
+                    {
+                        "description": "Reset passoword data",
+                        "name": "data",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/dto.ResetUserPasswordRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "204": {
+                        "description": "No Content"
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/errors.HTTPError"
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized",
                         "schema": {
                             "$ref": "#/definitions/errors.HTTPError"
                         }
@@ -1891,14 +2034,15 @@
                 }
             }
         },
-        "dto.ResendConfirmUserRequest": {
+        "dto.ResetUserPasswordRequest": {
             "type": "object",
             "required": [
-                "email"
+                "password"
             ],
             "properties": {
-                "email": {
-                    "type": "string"
+                "password": {
+                    "type": "string",
+                    "minLength": 6
                 }
             }
         },
@@ -2025,6 +2169,17 @@
                     "type": "string"
                 },
                 "theme": {
+                    "type": "string"
+                }
+            }
+        },
+        "dto.UserEmailRequest": {
+            "type": "object",
+            "required": [
+                "email"
+            ],
+            "properties": {
+                "email": {
                     "type": "string"
                 }
             }
